--- a/istio/virtual_service_canary.yml
+++ b/istio/virtual_service_canary.yml
@@ -10,7 +10,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: "/carts"
+        prefix: "/"
     route:
     - destination:
         host: carts.production.svc.cluster.local
